--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 
     <br>
     <div class="imagens">
-        <a href="ada.html"><div class="img1"><img src="imagens/Ada_lovelace.jpg" height="70%">
+        <a href="ada.html"><div class="img1"><img src="Ada_lovelace.jpg" height="70%">
         <div class="left">Ada Lovelace</div>
         </div>
         </a>
 
-        <a href="jeff.html"><div class="img2"><img src="imagens/jeffbezos.jpg" height="70%">
+        <a href="jeff.html"><div class="img2"><img src="jeffbezos.jpg" height="70%">
           <div class="center">Jeff Bezos</div>
         </div>
         </a>
 
-        <a href="dennis.html"><div class="img3"><img src="imagens/Dennis.png" height="70%">
+        <a href="dennis.html"><div class="img3"><img src="Dennis.png" height="70%">
           <div class="right">Dennis Ritchie</div>
         </div>
         </a>   
