--- a/ada.html
+++ b/ada.html
@@ -14,7 +14,7 @@
     </div>
     <br>
     <div class="imagens">
-        <div class="img"><img src="imagens/Ada_lovelace.jpg" width="13%"> 
+        <div class="img"><img src="Ada_lovelace.jpg" width="13%"> 
             <div class="line">Ada Lovelace</div>
         </div>
 
