--- a/dennis.html
+++ b/dennis.html
@@ -14,7 +14,7 @@
     </div>
     <br>
     <div class="imagens">
-        <div class="img"><img src="imagens/Dennis.png" width="15%">
+        <div class="img"><img src="Dennis.png" width="15%">
             <div class="line">Dennis Ritchie</div>
     </div>
 
