--- a/jeff.html
+++ b/jeff.html
@@ -15,7 +15,7 @@
     <br>
 
     <div class="imagens">
-        <div class="img"><img src="imagens/jeffbezos.jpg" width="15%">
+        <div class="img"><img src="jeffbezos.jpg" width="15%">
             <div class="line">Jeff Bezos</div>
     </div>
     
